# Fast2bRAD-M

./: Cargo.toml  FUNCTION_COMPARISON.md  README.md  README_sprint1.md  TEST_RESULTS.md  fast2brad_m_conda.yaml
example/: test.sh
example/example_db/02_db_qual/: BcgI.enzyme.iibdb  BcgI.species.iibdb
example/example_db/pre_digested_output/: GCA_000477855.1.BcgI.iibdb  GCA_000477855.1.BcgI.stat.tsv  GCA_000521385.1.BcgI.iibdb  GCA_000521385.1.BcgI.stat.tsv  GCA_000521405.1.BcgI.iibdb  GCA_000521405.1.BcgI.stat.tsv  GCA_000521425.1.BcgI.iibdb  GCA_000521425.1.BcgI.stat.tsv  GCA_000521445.1.BcgI.iibdb  GCA_000521445.1.BcgI.stat.tsv  GCF_000007445.1.BcgI.iibdb  GCF_000007445.1.BcgI.stat.tsv  GCF_000010485.1.BcgI.iibdb  GCF_000010485.1.BcgI.stat.tsv  GCF_000013265.1.BcgI.iibdb  GCF_000013265.1.BcgI.stat.tsv  GCF_000013305.1.BcgI.iibdb  GCF_000013305.1.BcgI.stat.tsv  GCF_000014845.1.BcgI.iibdb  GCF_000014845.1.BcgI.stat.tsv  GCF_000535755.1.BcgI.iibdb  GCF_000535755.1.BcgI.stat.tsv  GCF_000602265.1.BcgI.iibdb  GCF_000602265.1.BcgI.stat.tsv  GCF_000644715.1.BcgI.iibdb  GCF_000644715.1.BcgI.stat.tsv  GCF_000735755.1.BcgI.iibdb  GCF_000735755.1.BcgI.stat.tsv  GCF_001209085.1.BcgI.iibdb  (+1 more)
example/example_db_data/: example_genomes_list.txt  example_genomes_taxonomy.txt  example_ko_mapping.txt
example/example_sample_data/: example_samples_list.txt
scripts/: run_pipeline.sh
src/: build_qual_db.rs  build_quan_db.rs  enzymes.rs  extract.rs  find_genome.rs  inspect.rs  io_utils.rs  main.rs  merge.rs  pipeline.rs  predict.rs  quantify.rs  types.rs
src.bk/: ml.rs
tools/: convert_gtdb_taxonomy.py
(+32 files in other folders)
